# blogify-ai-adk-based

./: .dockerignore  .env.example  .env.prod.example  .gitignore  ASSESSMENT.md  CLAUDE.md  DEPLOYMENT_READINESS.md  Dockerfile  MANUAL_QA_CHECKLIST.md  PR_TEMPLATE.md  README.md  TEST_FIXES_ANALYSIS.md  UPSTREAM_SERVICE_DEPLOYMENT.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  session-ses_1fba.md  skills-lock.json
.github/workflows/: ci.yml  deploy.yml
.opencode/plans/: budget-finalization-fix.md  project-context-document.md
backend/: .gitignore  Dockerfile  README.md  __init__.py  app.py  docker-compose.base.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.vpc.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/docs/: ADR-2026-05-30-schema-rationale-worker-recovery.md  ADR-2026-05-30-worker-recovery-versioned-state.md  ADR-2026-06-17-pipeline-phase-and-loop-semantics.md  ADR-2026-06-17-redis-queue-recovery-reconciliation.md  ARCHITECTURE-blogify.md  AUDIT-REPORT.md  DISTRIBUTED-SYSTEMS-GUIDE.md  INTERVIEW-2MIN-EXPLANATION.md  INTERVIEW-DEEP-DIVE-SYSTEM-DESIGN.md  POST-AUDIT-FEEDBACK.md  REFACTOR_PLAN.md  (+6 more)
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  BACKPRESSURE_PLAN.md  POST_REFACTOR_AUDIT.md  aws-setup-runbook.md  database-schema.md  vercel-deploy-runbook.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
kubernetes/: configmap.yaml  deployment.yaml  secrets.yaml.template  worker-deployment.yaml
monitoring/: prometheus.yml
scripts/: check_startup.py  deploy.sh  ec2-bootstrap.sh  init_db.py  inject-secrets.sh  test.sh
(+278 files in other folders)
